tests/ui/consts/dangling_raw_ptr.stderr
error: encountered dangling pointer in final value of constant
  --> $DIR/dangling_raw_ptr.rs:1:1
   |
LL | const FOO: *const u32 = {
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

